# Projet-Image-M1IF

./: README.md  script.sh  scriptClassification.py  scriptClassification.sh
Reste_Image/: Bone-12A.pgm  Bone-15A.pgm  Glas-12A.pgm  Glas-14A.pgm  Glas-15A.pgm  Heart-13A.pgm  Heart-15A.pgm  Misk-12A.pgm  Misk-14A.pgm  Misk-15A.pgm  apple-11A.pgm  apple-13A.pgm  apple-14A.pgm  bat-12A.pgm  bat-13A.pgm  bat-14A.pgm  beetle-11A.pgm  beetle-13A.pgm  beetle-14A.pgm  beetle-15A.pgm  bell-11A.pgm  bell-13A.pgm  bell-14A.pgm  bell-15A.pgm  bird-11A.pgm  bird-12A.pgm  bird-14A.pgm  bird-15A.pgm  bottle-11A.pgm  bottle-12A.pgm  bottle-13A.pgm  bottle-14A.pgm  bottle-15A.pgm  brick-11A.pgm  brick-13A.pgm  butterfly-12A.pgm  butterfly-13A.pgm  butterfly-15A.pgm  camel-11A.pgm  camel-12A.pgm  (+126 more)
script/: Classify.py  Train.py  script.py
source/: CMakeLists.txt  FindArmadillo.cmake  Functions.cpp  Functions.hpp  ProjetImage.cpp  ProjetImage.hpp
tests/: Bone-11A.pgm  Bone-11B.pgm  Bone-11C.pgm  Bone-12B.pgm  Bone-12C.pgm  Bone-13A.pgm  Bone-13B.pgm  Bone-13C.pgm  Bone-14A.pgm  Bone-14B.pgm  Bone-14C.pgm  Bone-15B.pgm  Bone-15C.pgm  Comma-11A.pgm  Comma-11B.pgm  Comma-11C.pgm  Comma-12A.pgm  Comma-12B.pgm  Comma-12C.pgm  Comma-13A.pgm  Comma-13B.pgm  Comma-13C.pgm  Comma-14A.pgm  Comma-14B.pgm  Comma-14C.pgm  Comma-15A.pgm  Comma-15B.pgm  Comma-15C.pgm  Glas-11A.pgm  Glas-11B.pgm  Glas-11C.pgm  Glas-12B.pgm  Glas-12C.pgm  Glas-13A.pgm  Glas-13B.pgm  Glas-13C.pgm  Glas-14B.pgm  Glas-14C.pgm  Glas-15B.pgm  Glas-15C.pgm  (+831 more)
